# Spire-AI-Master

./: .gitignore  README.md  requirements.txt
data/: training_data.csv
docs/: PHASE_1_SUMMARY_REPORT.md  PROJECT_STRUCTURE.md  architecture_logic.md  bug_tracker.md  project_summary.md  三方案的大体安排计划.md
scripts/: start_engine.bat
src/: main.py
src/connector/: game_bridge.py
src/ui/: CMakeLists.txt  main.cpp  overlay_ui.py
tests/: mock_game_feed.py  test_data_collection.py  test_lethal_logic.py
